[package]
name = "bridge-cosm-wasm"
version = "0.1.0"
authors = ["traviolus <david.tumcharoen@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.10.1" }
cosmwasm-storage = { version = "0.10.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
sha2 = "0.9.5"
cw-storage-plus = "0.6.2"
hex = "0.4.3"
sp-io = "3.0.0"
sha3 = "0.9.1"
getrandom = { version = "0.2.3", features = ["js"] }
bincode = "1.0"
prost = "0.7"
ethabi = "14.1.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.10.1" }
